// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page background fill 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(242, 242, 242, 1);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 1536px;
  min-width: 384px;
  width: 100%;
  padding-left: 48px;
  padding-right: 48px;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
          >
            content
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page custom theme 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 1536px;
  min-width: 384px;
  width: 100%;
  padding-left: 48px;
  padding-right: 48px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          content
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page default kind 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 1536px;
  min-width: 384px;
  width: 100%;
  padding-left: 48px;
  padding-right: 48px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          content
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page full 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 100%;
  min-width: 384px;
  width: 100%;
  padding-left: 48px;
  padding-right: 48px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          content
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page narrow 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 768px;
  min-width: 384px;
  width: 100%;
  padding-left: 48px;
  padding-right: 48px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          content
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page renders default outside grommet wrapper 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-width: 1536px;
  min-width: 384px;
  width: 100%;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        content
      </p>
    </div>
  </div>
</DocumentFragment>
`;
